// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package espv2.api.envoy.v8.http.backend_auth;

import "api/envoy/v8/http/common/base.proto";
import "validate/validate.proto";

message BackendAuthRule {
  // Operation name, also known as selector.
  string operation = 1 [(validate.rules).string.min_bytes = 1];

  // Audience used to create the JWT token sent to the backend.
  // Must have a value, otherwise JWT is not valid.
  // https://cloud.google.com/endpoints/docs/openapi/openapi-extensions#jwt_audience_disable_auth
  string jwt_audience = 2 [(validate.rules).string = {
    min_bytes: 1,
    well_known_regex: HTTP_HEADER_VALUE,
    strict: false
  }];
}

message FilterConfig {
  // A list of backend auth rules.
  repeated BackendAuthRule rules = 1;

  oneof id_token_info {
    option (validate.required) = true;

    // The Instance Metadata Server uri used to fetch id token from Instance
    // Metadata Server.
    espv2.api.envoy.v8.http.common.HttpUri imds_token = 2;

    // Information used to fetch id token from Google Cloud IAM.
    espv2.api.envoy.v8.http.common.IamTokenInfo iam_token = 3;
  }
}
